--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "devDependencies": {
     "fs": "0.0.1-security",
     "ftp": "^0.3.10",
-    "koa-body": "^4.1.1"
+    "koa-body": "^4.1.1",
+    "xss": "^1.0.6"
   },
   "_moduleAliases": {
     "@root": ".",
