--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fs": "0.0.1-security",
     "ftp": "^0.3.10",
     "koa-body": "^4.1.1",
+    "sequelize-cli": "^6.2.0",
     "xss": "^1.0.6"
   },
   "_moduleAliases": {
